# passport-service

./: Cargo.toml
resource/: mrz.traineddata  output.json  sample.json
src/: main.rs  normalization.rs  passport.rs  reader.rs  weights.rs
