[package]
name = "passport-service"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "*"
http-service = "*"
leptess = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
structopt = "*"
tide = "*"
