[package]
name = "passport-service"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.9"
leptess = "0.8.1"
serde = { version = "1.0.102", features = ["derive"] }
stopwatch = "0.0.7"
structopt = "0.3.4"
